--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div id="phone-verification-overlay" class="phone-verification-overlay">
         <div class="verification-container">
             <h2>欢迎使用房贷计算器</h2>
-            <p>请输入您的手机号码以继续使用</p>
+            <p>请输入您用于下单的手机号码以继续使用</p>
             <div class="input-group">
-                <input type="tel" id="phone-number" placeholder="请输入11位手机号码" maxlength="11">
+                <input type="tel" id="phone-number" placeholder="请输入您用于下单的手机号码" maxlength="11">
                 <p id="phone-error" class="error-message"></p>
             </div>
             <button id="verify-btn" class="verify-btn">确认</button>
